--- a/source/index.html
+++ b/source/index.html
@@ -28,9 +28,13 @@
     </div>
     <!--navigation-->
     <nav class="main-nav main-nav-closed">
+      <button class="main-nav__toggle" type="button">
+        <span class="visually-hidden">Открыть меню</span>
+      </button>
       <ul class="main-nav__list">
         <li class="main-nav__item">
-          <a class="main-nav__link main-nav__link--index main-nav__link--current main-nav__link--current-desktop" href="#">Главная</a>
+          <a class="main-nav__link main-nav__link--index main-nav__link--current main-nav__link--current-desktop"
+            href="#">Главная</a>
         </li>
         <li class="main-nav__item">
           <a class="main-nav__link main-nav__link--index" href="./catalog.html">Каталог продукции</a>
@@ -56,16 +60,16 @@
         </div>
       </div>
       <div class="programs">
-        <div class="programs__card">
-          <h2 class="programs__card-title programs__card-title--slim">похудение</h2>
-          <span class="programs__card-description programs__card-description--slim">Ваш кот весит больше собаки и почти
+        <div class="programs__card programs__card--slim">
+          <h2 class="programs__card-title">похудение</h2>
+          <span class="programs__card-description">Ваш кот весит больше собаки и почти
             утратил способность лазить по
             деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</span>
           <a class="programs__card-link" href="./catalog.html">каталог slim</a>
         </div>
-        <div class="programs__card">
-          <h2 class="programs__card-title programs__card-title--mass">набор массы</h2>
-          <span class="programs__card-description programs__card-description--mass">Заработать авторитет среди дворовых
+        <div class="programs__card programs__card--mass">
+          <h2 class="programs__card-title">набор массы</h2>
+          <span class="programs__card-description">Заработать авторитет среди дворовых
             котов и даже собак? Серия Cat
             Energy
             Pro поможет вашему коту нарастить необходимые мышцы!</span>
