--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
   <!-- sprite -->
   <svg style="display: none;">
     <symbol viewbox="0 0 24 18" id="icon-burger">
-    <path stroke="#000" stroke-width="1.5" d="M0 1.25h24M0 9.25h24M0 17.25h24" />
+      <path stroke="#000" stroke-width="1.5" d="M0 1.25h24M0 9.25h24M0 17.25h24" />
     </symbol>
   </svg>
   <!--header-->
@@ -112,7 +112,7 @@
               питание.</span>
           </li>
           <li class="advantages__list-item">
-            <span class="advantages__list-text">Уже через месяц<br>наслаждайтесь изменениями<br>к лучшему вашего
+            <span class="advantages__list-text">Уже через месяц наслаждайтесь<br>изменениями к лучшему<br>вашего
               питомца!</span>
           </li>
         </ul>
