пиксель перфект страницы каталога

--- a/source/form.html
+++ b/source/form.html
@@ -35,7 +35,7 @@
       </button>
     </div>
     <!--navigation-->
-    <nav class="main-nav main-nav-closed">
+    <nav class="main-nav main-nav--closed">
       <ul class="main-nav__list">
         <li class="main-nav__item">
           <a class="main-nav__link" href="./index.html">Главная</a>
@@ -118,8 +118,8 @@
             </li>
           </ul>
         </fieldset>
-        <fieldset class="form__wrapper">
-          <legend class="form__wrapper-title">Комментарий</legend>
+        <fieldset class="form__wrapper form__wrapper--textarea">
+          <legend class="form__wrapper-title form__wrapper-title--textarea">Комментарий</legend>
           <textarea class="form-textarea" placeholder="Расскажите обо всех повадках кота"></textarea>
         </fieldset>
         <fieldset class="form__wrapper">
