--- a/source/catalog.html
+++ b/source/catalog.html
@@ -57,8 +57,8 @@
                 <source type="image/webp" media="(min-width: 768px)"
                 srcset="./img/tablet/catalog/chiken500.webp 1x, ./img/tablet/catalog/chiken500@2x.webp 2x" width="161"
                 height="172">
-                <source type="image/webp" src="./img/mobile/catalog/chiken500.webp" srcset="./img/mobile/catalog/chiken500@2x.webp 2x"
-                width="68" height="86" alt="корм с курицей 500гр.">
+                <source type="image/webp" srcset="./img/mobile/catalog/chiken500.webp 1x, ./img/mobile/catalog/chiken500@2x.webp 2x"
+                width="68" height="86">
                 <source media="(min-width: 768px)"
                   srcset="./img/tablet/catalog/chiken500.png 1x, ./img/tablet/catalog/chiken500@2x.png 2x" width="161"
                   height="172">
@@ -95,8 +95,8 @@
                 <source type="image/webp" media="(min-width: 768px)"
                   srcset="./img/tablet/catalog/chiken1000.webp 1x, ./img/tablet/catalog/chiken1000@2x.webp 2x" width="168"
                   height="206">
-                <source type="image/webp" src="./img/mobile/catalog/chiken1000.webp" srcset="./img/mobile/catalog/chiken1000@2x.webp 2x"
-                  width="84" height="100" alt="корм с курицей 1000гр.">
+                <source type="image/webp" srcset="./img/mobile/catalog/chiken1000.webp 1x, ./img/mobile/catalog/chiken1000@2x.webp 2x"
+                  width="84" height="100">
                 <source media="(min-width: 768px)"
                   srcset="./img/tablet/catalog/chiken1000.png 1x, ./img/tablet/catalog/chiken1000@2x.png 2x" width="168"
                   height="206">
@@ -133,8 +133,8 @@
                 <source type="image/webp" media="(min-width: 768px)"
                   srcset="./img/tablet/catalog/fish500.webp 1x, ./img/tablet/catalog/fish500@2x.webp 2x" width="161"
                   height="172">
-                <source type="image/webp" src="./img/mobile/catalog/fish500.webp" srcset="./img/mobile/catalog/fish500@2x.webp 2x" width="68"
-                  height="86" alt="корм с рыбой 500гр.">
+                <source type="image/webp" srcset="./img/mobile/catalog/fish500.webp 1x, ./img/mobile/catalog/fish500@2x.webp 2x" width="68"
+                  height="86">
                 <source media="(min-width: 768px)"
                   srcset="./img/tablet/catalog/fish500.png 1x, ./img/tablet/catalog/fish500@2x.png 2x" width="161"
                   height="172">
@@ -171,8 +171,8 @@
                 <source type="image/webp" media="(min-width: 768px)"
                   srcset="./img/tablet/catalog/fish1000.webp 1x, ./img/tablet/catalog/fish1000@2x.webp 2x" width="168"
                   height="206">
-                <source type="image/webp" src="./img/mobile/catalog/fish1000.webp" srcset="./img/mobile/catalog/fish1000@2x.webp 2x" width="84"
-                  height="100" alt="корм с рыбой 1000гр.">
+                <source type="image/webp" srcset="./img/mobile/catalog/fish1000.webp 1x, ./img/mobile/catalog/fish1000@2x.webp 2x" width="84"
+                  height="100">
                 <source media="(min-width: 768px)"
                   srcset="./img/tablet/catalog/fish1000.png 1x, ./img/tablet/catalog/fish1000@2x.png 2x" width="168"
                   height="206">
@@ -209,8 +209,8 @@
                 <source type="image/webp" media="(min-width: 768px)"
                   srcset="./img/tablet/catalog/buckwheat500.webp 1x, ./img/tablet/catalog/buckwheat500@2x.webp 2x"
                   width="161" height="172">
-                <source type="image/webp" src="./img/mobile/catalog/buckwheat500.webp" srcset="./img/mobile/catalog/buckwheat500@2x.webp 2x"
-                  width="68" height="86" alt="корм с гречкой 500гр.">
+                <source type="image/webp" srcset="./img/mobile/catalog/buckwheat500.webp 1x, ./img/mobile/catalog/buckwheat500@2x.webp 2x"
+                  width="68" height="86">
                 <source media="(min-width: 768px)"
                   srcset="./img/tablet/catalog/buckwheat500.png 1x, ./img/tablet/catalog/buckwheat500@2x.png 2x"
                   width="161" height="172">
@@ -247,8 +247,8 @@
                 <source type="image/webp" media="(min-width: 768px)"
                   srcset="./img/tablet/catalog/buckwheat1000.webp 1x, ./img/tablet/catalog/buckwheat1000@2x.webp 2x"
                   width="168" height="206">
-                <source type="image/webp" src="./img/mobile/catalog/buckwheat1000.webp" srcset="./img/mobile/catalog/buckwheat1000@2x.webp 2x"
-                  width="84" height="100" alt="корм с гречкой 1000гр.">
+                <source type="image/webp" srcset="./img/mobile/catalog/buckwheat1000.webp 1x, ./img/mobile/catalog/buckwheat1000@2x.webp 2x"
+                  width="84" height="100">
                 <source media="(min-width: 768px)"
                   srcset="./img/tablet/catalog/buckwheat1000.png 1x, ./img/tablet/catalog/buckwheat1000@2x.png 2x"
                   width="168" height="206">
@@ -285,8 +285,8 @@
                 <source type="image/webp" media="(min-width: 768px)"
                   srcset="./img/tablet/catalog/rice500.webp 1x, ./img/tablet/catalog/rice500@2x.webp 2x" width="161"
                   height="172">
-                <source type="image/webp" src="./img/mobile/catalog/rice500.webp" srcset="./img/mobile/catalog/rice500@2x.webp 2x" width="68"
-                  height="86" alt="корм с рисом 500гр.">
+                <source type="image/webp" srcset="./img/mobile/catalog/rice500.webp 1x, ./img/mobile/catalog/rice500@2x.webp 2x" width="68"
+                  height="86">
                 <source media="(min-width: 768px)"
                   srcset="./img/tablet/catalog/rice500.png 1x, ./img/tablet/catalog/rice500@2x.png 2x" width="161"
                   height="172">
