--- a/source/form.html
+++ b/source/form.html
@@ -75,7 +75,7 @@
               <li class="form-list__item form-list__item--radio-list">
                 <label class="form-list__item-radio-label" for="slim">
                   <input class="form-list__item-radio visually-hidden" type="radio" name="program-selection"
-                    value="похудение" id="slim" checked focusable="true">
+                    value="похудение" id="slim" checked>
                   <span class="form-list__item-radio-mark"></span>
                   <span class="form-list__item-radio-text">похудение</span>
                 </label>
