--- a/source/index.html
+++ b/source/index.html
@@ -59,8 +59,8 @@
               srcset="./img/promo-product-image-desktop.webp 1x, ./img/promo-product-image-desktop2x.webp 2x">
             <source type="image/webp" media="(min-width: 768px)"
               srcset="./img/promo-product-image-tablet.webp 1x, ./img/promo-product-image-tablet2x.webp 2x">
-            <source type="image/webp" src="./img/promo-product-image.webp" srcset="./img/promo-product-image2x.webp 2x"
-              alt="Образец питания" width="280" height="270">
+            <source type="image/webp" srcset="./img/promo-product-image.webp 1x, ./img/promo-product-image2x.webp 2x"
+              width="280" height="270">
             <source media="(min-width: 1200px)"
               srcset="./img/promo-product-image-desktop.png 1x, ./img/promo-product-image-desktop2x.png 2x">
             <source media="(min-width: 768px)"
